Update homepage to v1.2.0

--- a/docker/ansible/templates/compose-modules/homepage.yml
+++ b/docker/ansible/templates/compose-modules/homepage.yml
@@ -1,7 +1,7 @@
 services:
   homepage:
     container_name: homepage
-    image: ghcr.io/gethomepage/homepage:v0.10.9@sha256:b6d732817572f9af99ec168b10641b8f7820f30cfa5a5cc5c68f1e291804bec8
+    image: ghcr.io/gethomepage/homepage:v1.2.0@sha256:5e6bcbb595c4e857540577135e0f8b3ffc2e97c23d6e0ddc7df183de5bfdd442
     depends_on:
       - traefik
       - homepage-docker-proxy
@@ -15,6 +15,7 @@ services:
       # - PUID=${PUID}
       # - PGID=${PGID}
       - TZ=${TZ}
+      - HOMEPAGE_ALLOWED_HOSTS=traefik # Hostname of the Traefik container
     security_opt:
       - no-new-privileges=true
     mem_limit: 200m
