--- a/docker/ansible/templates/data/common/homepage/services.yaml
+++ b/docker/ansible/templates/data/common/homepage/services.yaml
@@ -2,17 +2,20 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/latest/configs/services
 
-# - My First Group:
-#     - My First Service:
-#         href: http://localhost/
-#         description: Homepage is awesome
-
-# - My Second Group:
-#     - My Second Service:
-#         href: http://localhost/
-#         description: Homepage is the best
-
-# - My Third Group:
-#     - My Third Service:
-#         href: http://localhost/
-#         description: Homepage is 😎
+- Infra:
+    - NAS:
+        href: https://svlnas.{{ generic__domain_name }}
+        icon: truenas
+        description: TrueNAS Scale
+    - JetKVM:
+        href: http://jetkvm.MANAGEMENT
+        icon: jetkvm
+        description: KVM Server
+    - Proxmox SVLHOST01:
+        icon: proxmox
+        href: https://SVLHOST01.{{ generic__domain_name }}:8006
+        description: Proxmox Host 01
+    - Proxmox SVLHOST02:
+        icon: proxmox
+        href: https://SVLHOST02.management:8006
+        description: Proxmox Host 02
