--- a/docker/ansible/templates/data/common/homepage/services.yaml
+++ b/docker/ansible/templates/data/common/homepage/services.yaml
@@ -2,7 +2,7 @@
 # For configuration options and examples, please see:
 # https://gethomepage.dev/latest/configs/services
 
-- Infra:
+- Infrastructure:
     - NAS:
         href: https://svlnas.{{ generic__domain_name }}
         icon: truenas
