--- a/docker/ansible/templates/data/common/homepage/services.yaml
+++ b/docker/ansible/templates/data/common/homepage/services.yaml
@@ -7,15 +7,19 @@
         href: https://svlnas.{{ generic__domain_name }}
         icon: truenas
         description: TrueNAS Scale
+        siteMonitor: https://svlnas.{{ generic__domain_name }}
     - JetKVM:
         href: http://jetkvm.MANAGEMENT
         icon: jetkvm
         description: KVM Server
+        siteMonitor: http://jetkvm.MANAGEMENT
     - Proxmox SVLHOST01:
         icon: proxmox
         href: https://SVLHOST01.{{ generic__domain_name }}:8006
         description: Proxmox Host 01
+        siteMonitor: https://SVLHOST01.{{ generic__domain_name }}:8006
     - Proxmox SVLHOST02:
         icon: proxmox
         href: https://SVLHOST02.management:8006
         description: Proxmox Host 02
+        siteMonitor: https://SVLHOST02.management:8006
