--- a/.archive/docker/ansible/templates/compose-modules/lobe-chat.yml
+++ b/.archive/docker/ansible/templates/compose-modules/lobe-chat.yml
@@ -1,6 +1,14 @@
+#
+#### DEPRECATION NOTICE
+## This compose module is no longer in use
+## Replaced by: None
+## Reason: Container uses 500+ MB of memory and it's not heavily used
+## Last used version: 1.88.2@sha256:09de1157529595f8c467030bf520ad9dea56388a2f6f875019b41f2860740327
+#
+
 services:
   lobe-chat:
-    image: lobehub/lobe-chat:1.88.2@sha256:09de1157529595f8c467030bf520ad9dea56388a2f6f875019b41f2860740327
+    image: lobehub/lobe-chat
     container_name: lobe-chat
     depends_on:
       - traefik
