Add media credentials

--- a/docker/ansible/tasks/load-credentials.yaml
+++ b/docker/ansible/tasks/load-credentials.yaml
@@ -26,6 +26,15 @@
                           # on load (this is the default)
   when: inventory_hostname in groups['management']
 
+- name: Load encrypted Media credentials
+  community.sops.load_vars:
+    file: ../inventory/group_vars/media/secrets.sops.yml
+    age_keyfile: $HOME/git/home/age.key
+    config_path: $HOME/git/home/.sops.yaml
+    expressions: ignore  # explicitly do not evaluate expressions
+                          # on load (this is the default)
+  when: inventory_hostname in groups['media']
+
 - name: Load encrypted Production credentials
   community.sops.load_vars:
     file: ../inventory/group_vars/production/secrets.sops.yml
