Auto create compose dir

--- a/docker/ansible/playbooks/new-docker-server.yaml
+++ b/docker/ansible/playbooks/new-docker-server.yaml
@@ -22,6 +22,7 @@
       loop:
         - "/srv/docker/data"
         - "/srv/docker/data/backup"
+        - "/srv/docker/data/compose"
         - "/srv/docker/data/traefik/acme"
 
     - name: Create acme config file for traefik
