Add SMB share mount tasks

--- a/docker/ansible/inventory/group_vars/media/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/media/secrets.sops.yml
@@ -1,5 +1,9 @@
 #ENC[AES256_GCM,data:rU84YfGpnQQ=,iv:JVSotPsI9UBOMgQHZqSfFrLBOd1JRz6QlQQRsGnOfUU=,tag:qCOWSFu8GyYgwrwGNmldVw==,type:comment]
 generic__database_encryption_passphrase: ENC[AES256_GCM,data:JgPzElppJqiZt5bYnHTRu05ydn5jwqhxXm2Zv7IQ33zzZZN5AXTth3Vei9T3lXRzA98gGwTMMM0xQRjB/Yxtpw==,iv:M3q+QM0gcHMbN3KdcU3eUUjhGEfpqAAZLLk87kDtnsE=,tag:OCOaDTJWhn9T8ax9xmbKHg==,type:str]
+generic__svlnas_smb_user: ENC[AES256_GCM,data:DEjYJWqG77ixbIgB,iv:ZZ84KQC+3Fwmk4pvJNPgJXeOV5uFbvBBtru/EpAO55w=,tag:MF3hlb7xrPb7EYhq4yypiw==,type:str]
+generic__svlnas_smb_password: ENC[AES256_GCM,data:FeAi9kh+ycd89Nlhp1k7pkl39QBb+MXfcrTYzzWFeHV9Srz3hZqiSC5bLnLDzGIJEnIkPhEDZ+70Er6F63M5Kw==,iv:inI1/lYjXnImZEPFE61aRvzX2otvb6i0IC90AbmdrkM=,tag:qgKbqJ9pF70YLQi/xBkPlg==,type:str]
+#ENC[AES256_GCM,data:keGrHd4RzSih9aZp5nQqbNuuiwEHx0ofsutYKYsl6DWVWJsKuccwX0DODgTZIdpZUA==,iv:GW7pJ7oYqoT3GLO/WHAzLUx7bHosVkBFVyQG2h1W9Cw=,tag:bvdzlmX+r253jtQnwYZa1g==,type:comment]
+generic__svlnas_smb_server: ENC[AES256_GCM,data:VxOUIeMXUP3Xg2hW,iv:31tDzc95Ax+nk/HfPVaJjsW7nAEm0sPtFurBZO5MBm0=,tag:b1w9om5r0Q29BuciumDHxQ==,type:str]
 #ENC[AES256_GCM,data:xH1mZmGOtekL0pddt4k=,iv:OkxMaN8fg18FcJ5x4yslfVwfkmE37G8xKf19I6NJdoc=,tag:4/GqGSybsUE1xViIi+gOdA==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:NlJNVAzpAo56IUYFX7jM7RGh5G5S65TL1yzbx69Onn1FNPIWIL/0qZpy6TNjFt3um795PlevyzyUhBGxVlvZwg==,iv:fgVTVxB6xfUiDEy1B03YHtZwEvlgHSAEGRtGeoZcyXY=,tag:TTJaB3f9DuYYYu5rX1fWPg==,type:str]
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
@@ -23,8 +27,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-25T10:25:18Z"
-    mac: ENC[AES256_GCM,data:+goKVcLQAk2z3Ja6NlpuHJDenx6s2yS3pyi22dDF91OiPJfBFhRf48zija8CfCWdMWCFYXHKvgZUFdAn8Uu6GCPbJ6y+hvatSSTd0bBQ8nP7xcAAIudnCH1WeGKvrZlyNwv8zcjoO98jSHiT4AjlQfSov4cwmybMxMbNwqkSjgg=,iv:uHizxnjhCUUEacITWkNquVSN/oO/bJleSCu5dosnKK0=,tag:ZJ0f8M4ZdAKOuBOYWbb+OA==,type:str]
+    lastmodified: "2025-05-25T13:30:19Z"
+    mac: ENC[AES256_GCM,data:UvIoYFdzxDtODkbApwyf5X2s6zAkmBe6O9tHwg92rZQI8VctWmZS/weYm/7I9mD1+gjxeAvZsoPUBZ1bZOhz1Qc4CRyVUV7W0am+hwBCK5vgf7CXgXU/+W8I19+QIeQ88Gjm5HMbpEjNgs45hDMqmfcsPKjWiKVTdYCZo6jFyVo=,iv:xIzVEjQMb6PAW7i8ztSbC2ykN4Vk/S3T8AC9SqNHP6U=,tag:xmHMsQNGD2yhu2m2124dwg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
