Add apps server

--- a/docker/ansible/inventory/group_vars/all/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/all/secrets.sops.yml
@@ -9,6 +9,9 @@ generic__user_username: ENC[AES256_GCM,data:FYuSWRNyEban,iv:uWX6i6Sxjl2OhTc/Tqmj
 generic__admin_email: ENC[AES256_GCM,data:KhQnf1zBa93ueRPm4IfsrHrngaEbDm6dirQylQ==,iv:LZEd6EzbaGRM8XUpcobqcBOelMtz70JeMwne/IIl64Y=,tag:akr7DOYWOlvZfywQes94Qg==,type:str]
 #ENC[AES256_GCM,data:W1aHCDtNEKcYK7c=,iv:wBtYycj+7FqduCFqvnR/kkUgRYYAkclV55rASKGeci0=,tag:r9As0gTr5D/IMJ/Ioz60EA==,type:comment]
 generic__hostnames_desktop: ENC[AES256_GCM,data:ArBBm1Yx7Yv5wVEULQ==,iv:gT32ebodi5+ZnQr9MjanCs1JXDgdzMK+i8P8+vvgUP8=,tag:2EOciDPyPVGEeIcsvrIueA==,type:str]
+#ENC[AES256_GCM,data:wUoRTDohTUqVBThlKCs=,iv:8u1kaJzIVChs0PAAd6Z9FJK9IyjtYDtH1Q9tQ/8F/NY=,tag:Euu0O2+XUQ4Woc2+x2XHZQ==,type:comment]
+#ENC[AES256_GCM,data:Fpg+aVahZmcCYM3BU7L7FZ8IL2eIFoQy2ZG2pRQgRZBjxda9hvZSMr68wcxDBevKGg==,iv:LbmkUKgzpyYQSCZCydbh1VQ0Wm2RMqtIXLLZWLbsicg=,tag:Ouo2Dq0hC8oLZ+LsOdYTwg==,type:comment]
+generic__svlnas_smb_server: ENC[AES256_GCM,data:xnPCGSTaKRrywIcE,iv:UBTkwES+DiFBccO41b9zInZEcnovqqehONX4trjwBIk=,tag:QjNzhYwuIoKprTRzkTxSvA==,type:str]
 #ENC[AES256_GCM,data:YG9EYvk=,iv:ohKGrqHgUEt6J+ZAoyU4SCcFufLBpXDMR879XuIW+/Y=,tag:MTsrOlfHI3eN1CDpeaS9CQ==,type:comment]
 generic__ips_svlext: ENC[AES256_GCM,data:skLtCu4jEeajbsmKQA==,iv:sEt7nbRvR4lBDzk4pjLFIkh6OI/GBK8TyKv05amN8k0=,tag:mav7JOP10xWc/AMIlbraQw==,type:str]
 #ENC[AES256_GCM,data:rNMVlLOS7A==,iv:oaQzgp9JXKULW7T6d+VJYfQS6+kweWwEkxRbPA6ExLE=,tag:BYCxExn+ElvS+EggLjETwA==,type:comment]
@@ -49,8 +52,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2024-05-21T07:48:43Z"
-    mac: ENC[AES256_GCM,data:Q+ibTSCkvvFNngudw3P+EeDHKZlho6FBzZrZJ4YOuOCNnC0HF2sUukCjD2qfZjCHETNlTsolU/2DEg30AALE5YcgE8SrTLOF8u5uYPdk3+GDV/Dwlu99uJ9xNIn0z2FQpv2UIM3fsmkK+0hRVdB23/Qa+3RLkMDLIIC2PKXYh6o=,iv:4Z1fsFYsE8WLefk/HKBZmcUXd0SeAkIKO3CJnCynHIg=,tag:qbyygonEvaX55q0XvnEKDQ==,type:str]
+    lastmodified: "2025-05-25T15:13:11Z"
+    mac: ENC[AES256_GCM,data:bMqi2UIwoNNfa/s76C8lVO1y2WrOPtl3gipO6045iUnCgUIEE/4G3YEwizNjfuDTiJ2rD8C1UGrIauSoJowAxc8Rq5IzNMAl9qPywFsO+XWrQi7OS826iRdJW9nfWTnwN970D6wpvapAGr4a6FL0Jy99VvaXMOc4V9Z3lj+/24I=,iv:PUFHM6eCL2SqiTPCYkM2fgWwwnRvJHTMB/XQNd5kxg4=,tag:S2W5A2EBbESWgcer8b4bqA==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
-    version: 3.8.1
+    version: 3.9.2
