--- a/docker/ansible/inventory/hosts.yaml
+++ b/docker/ansible/inventory/hosts.yaml
@@ -17,6 +17,10 @@ docker:
           children:
             internal:
               children:
+                apps:
+                  hosts:
+                    svlapps.VM-PROD:
+                      ansible_user: "jean-paul"
                 management:
                   hosts:
                     svlmgmt.MANAGEMENT:
