--- a/docker/ansible/tasks/load-credentials.yaml
+++ b/docker/ansible/tasks/load-credentials.yaml
@@ -17,6 +17,15 @@
                           # on load (this is the default)
   when: inventory_hostname in groups['docker']
 
+- name: Load encrypted Apps credentials
+  community.sops.load_vars:
+    file: ../inventory/group_vars/apps/secrets.sops.yml
+    age_keyfile: $HOME/git/home/age.key
+    config_path: $HOME/git/home/.sops.yaml
+    expressions: ignore  # explicitly do not evaluate expressions
+                          # on load (this is the default)
+  when: inventory_hostname in groups['apps']
+
 - name: Load encrypted Management credentials
   community.sops.load_vars:
     file: ../inventory/group_vars/management/secrets.sops.yml
