--- a/docker/ansible/tasks/mount-smb-shares.yaml
+++ b/docker/ansible/tasks/mount-smb-shares.yaml
@@ -2,10 +2,12 @@
 - name: Gather user ID and group ID
   getent:
     database: passwd
+
 - name: Print user ID and group ID
   debug:
       msg: "{{ ansible_user }}: {{ getent_passwd[ansible_user].1 }}:{{ getent_passwd[ansible_user].2 }}"
-- name: Mount ephemeral SMB volume
+
+- name: Mount YouTube SMB volume
   ansible.posix.mount:
     src: //192.168.1.30/YouTube
     path: /mnt/smb_share_youtube
@@ -13,4 +15,4 @@
     fstype: cifs
     state: mounted
   become: true # Needed to make the destination dir
-  when: inventory_hostname in groups['media']
+  when: inventory_hostname in groups['media'] or inventory_hostname in groups['apps']
