--- a/docker/ansible/templates/compose-modules/metube.yml
+++ b/docker/ansible/templates/compose-modules/metube.yml
@@ -17,7 +17,8 @@ services:
       - AUDIO_DOWNLOAD_DIR=/downloads/audio
       - DOWNLOAD_DIR=/downloads/
       - TEMP_DIR=/metube-temp-dir
-      - 'YTDL_OPTIONS={"format": "best", "exec": "ffmpeg -i %(filepath)q -c:v libx264 -c:a aac %(filepath)q.h264.mp4"}'
+      # NOTE: Needed for iOS compatibility but seems to reduce quality a lot! Works fine without on Plex
+      #- 'YTDL_OPTIONS={"format": "best", "exec": "ffmpeg -i %(filepath)q -c:v libx264 -c:a aac %(filepath)q.h264.mp4"}'
     networks:
       - metube-frontend
     labels:
