--- a/docker/ansible/templates/compose-modules/plex.yml
+++ b/docker/ansible/templates/compose-modules/plex.yml
@@ -2,9 +2,9 @@
 # Manual work to implement on a new server:
 #
 # - Plex claim token must be refreshed
-# - Enable remote access in Plex settings
 # - Set LAN networks in Plex settings to 192.168.0.0/16,172.16.0.0/16 (Traefik uses 172.16.0.0/16 network)
 #   - You should now see streams mentioned as 'Local' instead of 'Remote'
+#   - Within the Plex portal on the server settings, you'll still see 'Remote' being mentioned, but this is normal (it seems)
 # - Enable automatic library scanning in Plex settings
 # - Set backup directory in Plex settings under Scheduled Tasks
 
@@ -66,7 +66,7 @@ services:
       - "traefik.docker.network=plex-frontend"
       ## Middlewares
       ## Using no-auth chain since Plex app doesn't support auth proxy
-      - "traefik.http.routers.plex-rtr.middlewares=chain-no-auth@file"
+      - "traefik.http.routers.plex-rtr.middlewares=chain-no-auth-plex@file"
       ## HTTP Services
       - "traefik.http.routers.plex-rtr.rule=Host(`plex.$DOMAINNAME`)"
       - "traefik.http.routers.plex-rtr.service=plex"
@@ -74,7 +74,7 @@ services:
       - "traefik.http.services.plex.loadbalancer.server.port=32400"
       ## Extra no-auth endpoint. No need to create a new service
       - "traefik.http.routers.plex-noauth-rtr.rule=Host(`plex-noauth.$DOMAINNAME`)"
-      - "traefik.http.routers.plex-noauth-rtr.middlewares=chain-no-auth@file"
+      - "traefik.http.routers.plex-noauth-rtr.middlewares=chain-no-auth-plex@file"
       - "traefik.http.routers.plex-noauth-rtr.service=plex"
 
 volumes:
