--- a/docker/ansible/templates/compose-modules/metube.yml
+++ b/docker/ansible/templates/compose-modules/metube.yml
@@ -7,7 +7,8 @@ services:
     restart: always
     security_opt:
       - no-new-privileges=true
-    mem_limit: 1024m
+    # Limiting to 1024 can cause issues with large downloads. 2048 is more stable.
+    mem_limit: 2048m
     volumes:
       # SMB Share
       - /mnt/smb_share_youtube/metube:/downloads
