--- a/docker/ansible/templates/compose-modules/metube.yml
+++ b/docker/ansible/templates/compose-modules/metube.yml
@@ -18,6 +18,8 @@ services:
       - AUDIO_DOWNLOAD_DIR=/downloads/audio
       - DOWNLOAD_DIR=/downloads/
       - TEMP_DIR=/metube-temp-dir
+      - DOWNLOAD_MODE=limited
+      - MAX_CONCURRENT_DOWNLOADS=1
       # NOTE: Needed for iOS compatibility but seems to reduce quality a lot! Works fine without on Plex
       #- 'YTDL_OPTIONS={"format": "best", "exec": "ffmpeg -i %(filepath)q -c:v libx264 -c:a aac %(filepath)q.h264.mp4"}'
     networks:
