--- a/docker/ansible/tasks/configure-docker.yaml
+++ b/docker/ansible/tasks/configure-docker.yaml
@@ -2,15 +2,22 @@
 - name: Ensure docker group exists with specific GID
   ansible.builtin.group:
     name: docker
-    gid: "{{ pgid }}" # Ensure we enforce the default GID for the docker group
+    gid: 994 # Ensure we enforce the default GID for the docker group
     state: present
+
+- name: Ensure service acount group exists with specific GID
+  ansible.builtin.group:
+    name: "svc-{{ inventory_hostname_short }}"
+    gid: "{{ puid }}"
+    state: present
+  when: inventory_hostname_short in docker__uid_map
 
 - name: Create Docker user with specific UID and group
   ansible.builtin.user:
-    name: docker
+    name: "svc-{{ inventory_hostname_short }}"
     comment: Docker User to run containers with specific UID and group
     uid: "{{ puid }}"
-    group: docker
+    group: "svc-{{ inventory_hostname_short }}"
     shell: /usr/sbin/nologin
   when: inventory_hostname_short in docker__uid_map
 
