--- a/docker/ansible/playbooks/update-os.yaml
+++ b/docker/ansible/playbooks/update-os.yaml
@@ -1,5 +1,5 @@
 ---
-- hosts: all
+- hosts: compute
   name: "Update the basics"
   become: yes
   gather_facts: true
@@ -15,34 +15,10 @@
     - include_tasks: ../tasks/update-dotfiles.yaml
     - include_tasks: ../tasks/update-omz.yaml
 
-    #
-    # Load encrypted credentials for the update-certificates task
-    #
-
-    - name: Load encrypted credentials
-      community.sops.load_vars:
-        file: ../inventory/group_vars/all/secrets.sops.yml
-        age_keyfile: $HOME/git/home/age.key
-        config_path: $HOME/git/home/.sops.yaml
-        expressions: ignore  # explicitly do not evaluate expressions
-                              # on load (this is the default)
-
-    - name: Load encrypted Docker credentials
-      community.sops.load_vars:
-        file: ../inventory/group_vars/docker/secrets.sops.yml
-        age_keyfile: $HOME/git/home/age.key
-        config_path: $HOME/git/home/.sops.yaml
-        expressions: ignore  # explicitly do not evaluate expressions
-                              # on load (this is the default)
-      when: inventory_hostname in groups['docker']
-
-    - include_tasks: ../tasks/update-certificates.yaml
-      when: inventory_hostname in groups['docker'] and inventory_hostname in groups['internal']
-
   handlers:
     - import_tasks: ../handlers/main.yml
 
-- hosts: all
+- hosts: compute, virtualization
   name: "Update risky components (OS, packages, etc.)"
   become: yes
   gather_facts: true
@@ -59,6 +35,18 @@
         cmd: "docker compose up -d foldingathome --wait 2>&1"
         chdir: /srv/docker
       when: inventory_hostname in groups['external']
+
+  handlers:
+    - import_tasks: ../handlers/main.yml
+
+- hosts: nas
+  name: "Check for TrueNAS updates"
+  become: false
+  gather_facts: false
+  order: sorted # Runs alphabetically
+  serial: 1 # Run all tasks on one host before going to the next
+  tasks:
+    - include_tasks: ../tasks/check-truenas-updates.yaml
 
   handlers:
     - import_tasks: ../handlers/main.yml
