Ensure mount points exists before mounting

--- a/docker/ansible/inventory/group_vars/apps/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/apps/secrets.sops.yml
@@ -2,6 +2,13 @@
 generic__database_encryption_passphrase: ENC[AES256_GCM,data:w4uL/EXVldJoj4n+vLqob9r0QYsMB1BuSX+/3B+wNOjXDDYYT8J5USAQHxM8D3ASKPiW0P1FD3uNjAPIoS6EUw==,iv:Kk4o9SPiJ3MMLRkBqjUWGD7tbZbZqiaFYRJ6/K8kStY=,tag:d2+go4P5l+evamHZ417P4g==,type:str]
 generic__svlnas_smb_user: ENC[AES256_GCM,data:jNdBbK8UWtszHaY=,iv:t8kbr25/parp+cxghyxt8entHj1cfgNuG7VJksqMxDQ=,tag:i2p7wzvPMgSknHrpwAb1Kg==,type:str]
 generic__svlnas_smb_password: ENC[AES256_GCM,data:hzCMS+UT5djUweY6aSThJ6+8AyOw5ZcCmf0nLL5NoEgVii1uF39cke7sZyhqfFXSrCfUMewDMKBPk0beuAx8Kw==,iv:1xr0RavtBDds+wN6GUJTLmi8swn0Grb7+RVB3940Nek=,tag:Zm1KYyLaENhFk8Hn9PWBJg==,type:str]
+generic__svlnas_smb_shares:
+    - ENC[AES256_GCM,data:nE7pQx18egTM3Q==,iv:81h+hgNyZFwTR/c9lFuUW56lnvZa2dZVUWSahycwB3Q=,tag:Cy/zeGizmHT0kMHVugv3vA==,type:str]
+    - ENC[AES256_GCM,data:Hg0VADqy,iv:eaX/+yjWOcScFaizFX4gTbvVkaSqv1rVwCd1EyGrgYc=,tag:VA3oRTRDhAiEM3qMIYBKxw==,type:str]
+    - ENC[AES256_GCM,data:Fmd2/3k=,iv:IHnkoDdnh5bLyrm45nFjy1BEJLjgonqimIITB1GeZxo=,tag:3wMG8f2oqmWQA9vFnn8NHg==,type:str]
+    - ENC[AES256_GCM,data:waPz75Q=,iv:yADGUCGYOUEQW6lhGHQ2j0qp9bVyYlIUwVbB9x8oYsw=,tag:alkgE57CZfzLMoenpjoOaQ==,type:str]
+    - ENC[AES256_GCM,data:LQA=,iv:Xu92QbwD8uQkpn7EccA9EB8jaep/mpyPpnJF/hc8j/0=,tag:3yiGyA9ij+BHAMuxAT6SNQ==,type:str]
+    - ENC[AES256_GCM,data:4lct5laO7Q==,iv:BAwvrQWe5ySfrSmLOT7g6F+DAsQCwwwJ4PClyKpPymQ=,tag:3GwbSn2COtZRvCimYe2yrQ==,type:str]
 #ENC[AES256_GCM,data:xH1mZmGOtekL0pddt4k=,iv:OkxMaN8fg18FcJ5x4yslfVwfkmE37G8xKf19I6NJdoc=,tag:4/GqGSybsUE1xViIi+gOdA==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:0INexTdPLekqGdiQ5HraeUiOfEf9aErGh3GGA2Na6cN2lZBc7uRYG++okq4sdwlWtw3jQZoCiTVd+8Hu2YXfpQ==,iv:4rufboRF6csAajxL2aKxRNLj6+5IzF4DxLfGdSvlD4Y=,tag:Ek/eUKzqsJlcRHr2vJkJSg==,type:str]
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
@@ -25,8 +32,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-25T15:12:57Z"
-    mac: ENC[AES256_GCM,data:LJ17cK+TZHCMPd0zG2qSm8W5CQJYh5dNJYC0+lrOHB2VZPpI1xUzAmHyyANaNr2MHU7DY/NeO+P9mW6L+vNtjTyEctF8Iyr9osjbtM4mUn+4OYIUY8iF8b0pcm1Sg6zAQ7ipwF7wFc6T7bkFwe3mSzckQVxbYUaxXMAreizHdJ4=,iv:Kx54PumSvWYlW9aNDVeyWhgPkHQoyxzbEKZTYk8SKXg=,tag:Y4fiG6wGqS5ud4M+Twh5LA==,type:str]
+    lastmodified: "2025-06-01T10:54:59Z"
+    mac: ENC[AES256_GCM,data:i0pCbkD+RIdf/DKQ42dUn8nr389g3IpSDiC7RpOAmHc+J8Y4uBf37v3eX2JL816dgkr23E7X3ka6xHazki4ceh4SyN1/81q8HidilJoNx0yxlZxcXPhHW8+L6FTr4q5OuObWidp1lgCVQ5owZSDs0IbxIcn56tBVN+pwQjXg8KY=,iv:y9oqjqU3sy92Kd5ZFkOmFuCUaakH5svX5miKgZy38iM=,tag:Ozue0DYr5nkkgUZMGb1QKg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
