--- a/docker/ansible/tasks/update-dotfiles.yaml
+++ b/docker/ansible/tasks/update-dotfiles.yaml
@@ -39,7 +39,7 @@
 
 - name: Show git pull results
   debug: msg="{{ pull_result.stdout_lines }}"
-  when: inventory_hostname not in groups['hypervisor'] and pull_result.stdout_lines
+  when: pull_result.stdout_lines
 
 - name: Run bootstrap script
   become: false
@@ -53,4 +53,4 @@
 - name: Show bootstrap results
   become: false
   debug: msg="{{ bootstrap_result.stdout_lines }}"
-  when: inventory_hostname not in groups['hypervisor']
+  when: bootstrap_result.stdout_lines
