Use single homepage container for internal - without auth but with IP whitelisting

--- a/docker/ansible/templates/data/common/traefik/rules/middlewares-chains.yml
+++ b/docker/ansible/templates/data/common/traefik/rules/middlewares-chains.yml
@@ -48,3 +48,9 @@ http:
           - "middlewares-rate-limit"
           - "middlewares-secure-headers"
           - "middlewares-whitelist-mgmt"
+    chain-no-auth-svlinfra-whitelist:
+      chain:
+        middlewares:
+          - "middlewares-rate-limit"
+          - "middlewares-secure-headers"
+          - "middlewares-whitelist-svlinfra"
