--- a/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/docker/secrets.sops.yml
@@ -7,6 +7,11 @@ generic__database_backup_storage_account_key: null
 generic__database_backup_storage_account_path: ENC[AES256_GCM,data:X+9RSvQYb70iNQZ++qwujtA=,iv:fOgASRH7082DDnsX8pIVarhN/JT2dtteWnawFlM0edw=,tag:hOiO/2fiaZ93tCb8fEHYBw==,type:str]
 generic__database_backup_storage_account_mode: ENC[AES256_GCM,data:AVDA8w==,iv:Ip+3pu5P8EfoScpn9gT6KRmlJRDE+wXEOTF6+PtXmPU=,tag:XshJRPZbyo9r4EnOuIeqWQ==,type:str]
 generic__ips_traefik: ENC[AES256_GCM,data:IRsIbfTS8IdwTZpfHdfk,iv:L+z1q+PHjSYr7X4t2NQOcaiS9qgaPhd8rWi19G+TVGA=,tag:ioIXRVidrKcyWKyqUtPQMA==,type:str]
+#ENC[AES256_GCM,data:Wl05KAI3PlZ4zHIjPmY1oQ==,iv:0PbWA0vuNCxhea9Kzxq8+OmIMHs2DpyD05oLLlNL8SQ=,tag:cSOAahWnkzXayGb+lUj4dA==,type:comment]
+generic__docker_traefik_htpasswd_entry: ENC[AES256_GCM,data:kxxDLUwEcXdDpPSsWA8ks3hzOZ2Lg/RGxE4a9nsq9eJjqWvYJD+UBOt0R2I=,iv:QHuxMr/sbp9HDrZb7umV31vQRgLfkqp7upmaP6S3rE8=,tag:SKeO9ZpuRtEXSjwXWOIsBQ==,type:str]
+#ENC[AES256_GCM,data:JmeIn4VJQS9Sf3ZJwflz5ngAQpEjoXSlK8T8KeTFKb5SHUjLl6qLP/dotyA7GydqxGVo1KebJuNuWZkjYS6Rgt6HxsqNcu+30xfO+USsZcYjDLt7r2K43bT/SjFbA1ti9TTl+eWwSSlURk0UOfTI01/DFO50/xPYk6s+61X54rFKhE0EVr4Hj3dTuffJFr8yPnKCCzDElG1yZfGAQYhxZoc=,iv:22orSRrcjHrerwyf+DWJEZlZSQvDydn8pevLMqo67Ao=,tag:6425ES4BH2rQS+dmeRNbuQ==,type:comment]
+generic__docker_traefik_htpasswd_entry_b64: ENC[AES256_GCM,data:+xIr0+Xs10LNuI4I/2gPcDnTiEiaD2iF8ADwwTFwnz8KsPCIWMxWEpRclASc+IqYchNm4bzhDOJt2kXD1hqGr8irrpgT68mXY2wRHA==,iv:HRcVN37wsLPzErHhO6CYzia7/fx9LoAvKJzpP6m5vQE=,tag:nbu6HxTVN50VVcyMU+pP8g==,type:str]
+generic__docker_traefik_htpasswd_password: ENC[AES256_GCM,data:v3G6cjLypqXx9uw8lvnozdeRoTo36iifAaWAvtIFU6coXX+Pd/GK3fVxbD5PB/7v,iv:0vBlr2ZBIiSgadUIa8lTtTdPy+PwPodMKrXnI6xY9js=,tag:p2qvk96OWOonEMx1eXdC0w==,type:str]
 #ENC[AES256_GCM,data:kMi7iD+W9auJZVVdM0k=,iv:5GJjPNZ+8lwY4QV7sCC9NZMhSKf+qXjh2L5OCDxTqjk=,tag:k0A2Xd4Dy4WAVqkVhR9hOg==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:LZVtUXRFD40C9vrz/V9OGOMhC1DXb0BTx3alMAhja99z0Za/e5QiP8/HPd9iqqFfPijfbY/0WNXKqNtJz1mBYQ==,iv:lRYtRXO/BDbl0BaafnJxCeoeNR1hT93a6udBNRszzsA=,tag:nqI1LbAH+e/zbEJ71qpcTg==,type:str]
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
@@ -140,8 +145,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-25T19:42:53Z"
-    mac: ENC[AES256_GCM,data:PGLAyaHL/903U6AKuhokT028VOXsU3DXZLqOjmwJuIfGAhc4RSe77+b6sK+WMBeHlIE/lS8+zvRLhaM+e3YvL6QRgCE/hiSyDAJEjxHSKpm8l2Lu1jpo4bulYXdEytuhcYbDpssoVI+4KYqQjKSH7jUn6xSlEhYb6vNnSISJRho=,iv:Ks6Ny5LYsAdqmsNKQUkWylhzNRUjm9jNOAF9ykMdWGQ=,tag:vECDGUJIz1I8nfsiF55EDg==,type:str]
+    lastmodified: "2025-06-04T18:29:44Z"
+    mac: ENC[AES256_GCM,data:napvA8iUJDNierBbfExqg/WSafRK71p59w9/MjGcY6X+PZYM0lTIc/Q2UhkeitIZNz3wZwDQb07AZhylQregg6SOPaOQw4Mc7bwlHSNNDQgEoagTX88S+CZsrVcEaGzMXx7zTT4KNq/ueaVJ5afOYZx1HIVYuVZceJyw+a+JEvc=,iv:PZZK4GC7EgaDqlGHRg1CdZVKZT8/QnE5INWdRrPHpo0=,tag:xbLAJOFUOKHKLVfmFGinVw==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
