--- a/docker/ansible/inventory/group_vars/media/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/media/secrets.sops.yml
@@ -2,6 +2,8 @@
 generic__database_encryption_passphrase: ENC[AES256_GCM,data:JgPzElppJqiZt5bYnHTRu05ydn5jwqhxXm2Zv7IQ33zzZZN5AXTth3Vei9T3lXRzA98gGwTMMM0xQRjB/Yxtpw==,iv:M3q+QM0gcHMbN3KdcU3eUUjhGEfpqAAZLLk87kDtnsE=,tag:OCOaDTJWhn9T8ax9xmbKHg==,type:str]
 generic__svlnas_smb_user: ENC[AES256_GCM,data:DEjYJWqG77ixbIgB,iv:ZZ84KQC+3Fwmk4pvJNPgJXeOV5uFbvBBtru/EpAO55w=,tag:MF3hlb7xrPb7EYhq4yypiw==,type:str]
 generic__svlnas_smb_password: ENC[AES256_GCM,data:FeAi9kh+ycd89Nlhp1k7pkl39QBb+MXfcrTYzzWFeHV9Srz3hZqiSC5bLnLDzGIJEnIkPhEDZ+70Er6F63M5Kw==,iv:inI1/lYjXnImZEPFE61aRvzX2otvb6i0IC90AbmdrkM=,tag:qgKbqJ9pF70YLQi/xBkPlg==,type:str]
+generic__svlnas_smb_shares:
+    - ENC[AES256_GCM,data:m2wa5KDBmtcRJdD+mvVyKzg=,iv:oRq9BmXl9KC3kjwq3OoI+qLj6qacGkR2USR+R8YjF6A=,tag:lJ0JoBeDxHF0poQM1/HySw==,type:str]
 #ENC[AES256_GCM,data:xH1mZmGOtekL0pddt4k=,iv:OkxMaN8fg18FcJ5x4yslfVwfkmE37G8xKf19I6NJdoc=,tag:4/GqGSybsUE1xViIi+gOdA==,type:comment]
 notifications__mailrise_smtp_password: ENC[AES256_GCM,data:NlJNVAzpAo56IUYFX7jM7RGh5G5S65TL1yzbx69Onn1FNPIWIL/0qZpy6TNjFt3um795PlevyzyUhBGxVlvZwg==,iv:fgVTVxB6xfUiDEy1B03YHtZwEvlgHSAEGRtGeoZcyXY=,tag:TTJaB3f9DuYYYu5rX1fWPg==,type:str]
 #ENC[AES256_GCM,data:bvF/JgA=,iv:6ohFEwjJlQz9gG8+WubBFTVdvlGrdfUkOrAIBsITIqQ=,tag:Z8ZseSFvJfr6NDNrdbbw9w==,type:comment]
@@ -25,8 +27,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-05-25T15:13:22Z"
-    mac: ENC[AES256_GCM,data:KkeeUQDdjcaqBjkw4ytaeiukZWfpxBEH0ow9LCBw3HAMYtEatnYIYG0TxlJiIB9aTZf//1XbGeid22cCQkBODc232+QKzli0hJ0A4AAP5n1uhVVtuyzHsWAHQcxqZB6pWTujcvPYZSRyPE9MUHWOisLU8muMNBJY3sr0iPA0YDM=,iv:CrmB2xSzfhdXOG4SzGrtkH0X6k8CKPHryZzd60TqcVg=,tag:abUQ2J6FHbEjicuXta+eVA==,type:str]
+    lastmodified: "2025-06-05T15:45:39Z"
+    mac: ENC[AES256_GCM,data:h5bSyldpkVieap3AsC6R1e/6PuxJSXCs7QpswJgxPm65UDnK2pVuMUNp8P+iZ8kBn9EBmoeeaRfoaxLN05mZlJ9+yZ7TflOIafOhjafeRMdwo1NrLrqNXyF4k9hON+BMpzVeyfeoCPw3VPHq/HNtE/rRU0/HfaKrmbZqi9ldtBQ=,iv:WA+P0RPRf6U+0QuiWZg/sQJL5m6xZNBGHI9TVbp7sDc=,tag:nrmf+iZMZCBe2vJssytzMg==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
