--- a/docker/ansible/templates/compose-modules/dozzle.yml
+++ b/docker/ansible/templates/compose-modules/dozzle.yml
@@ -18,8 +18,8 @@ services:
       - DOZZLE_NO_ANALYTICS=true
     labels:
       # Homepage
-      - homepage.group=Infrastructure
-      - homepage.name=Dozzle
+      - homepage.group=Per Server Consoles
+      - homepage.name=Dozzle - $GENERIC_HOSTNAME_SUFFIX
       - homepage.icon=dozzle.svg
       - homepage.href=https://dozzle-$GENERIC_HOSTNAME_SUFFIX.$DOMAINNAME
       - homepage.description=Container Log Viewer
