--- a/docker/ansible/inventory/group_vars/apps/secrets.sops.yml
+++ b/docker/ansible/inventory/group_vars/apps/secrets.sops.yml
@@ -6,6 +6,7 @@ generic__svlnas_smb_shares:
     - ENC[AES256_GCM,data:nE7pQx18egTM3Q==,iv:81h+hgNyZFwTR/c9lFuUW56lnvZa2dZVUWSahycwB3Q=,tag:Cy/zeGizmHT0kMHVugv3vA==,type:str]
     - ENC[AES256_GCM,data:Hg0VADqy,iv:eaX/+yjWOcScFaizFX4gTbvVkaSqv1rVwCd1EyGrgYc=,tag:VA3oRTRDhAiEM3qMIYBKxw==,type:str]
     - ENC[AES256_GCM,data:Fmd2/3k=,iv:IHnkoDdnh5bLyrm45nFjy1BEJLjgonqimIITB1GeZxo=,tag:3wMG8f2oqmWQA9vFnn8NHg==,type:str]
+    - ENC[AES256_GCM,data:d3a3Mz5q,iv:EOhwHlB0sitmw0RxW4ATSHHsC7EYysAdH0DbJUqmbr0=,tag:ZViSm0Zb4eliAn3i7Tp8SQ==,type:str]
     - ENC[AES256_GCM,data:waPz75Q=,iv:yADGUCGYOUEQW6lhGHQ2j0qp9bVyYlIUwVbB9x8oYsw=,tag:alkgE57CZfzLMoenpjoOaQ==,type:str]
     - ENC[AES256_GCM,data:LQA=,iv:Xu92QbwD8uQkpn7EccA9EB8jaep/mpyPpnJF/hc8j/0=,tag:3yiGyA9ij+BHAMuxAT6SNQ==,type:str]
     - ENC[AES256_GCM,data:4lct5laO7Q==,iv:BAwvrQWe5ySfrSmLOT7g6F+DAsQCwwwJ4PClyKpPymQ=,tag:3GwbSn2COtZRvCimYe2yrQ==,type:str]
@@ -32,8 +33,8 @@ sops:
             eVBKRXVRTE0xSGdTQzF6enJtNnMzOGcKfIhR/2B8E7FhoP5b+fRdpPwIwE7gOrIa
             mR6EnBhQi6Cr/LM/7nwWvCt/E/2IoDLMPPl7f1xyDPIjV/fY5XncqQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-06-01T10:54:59Z"
-    mac: ENC[AES256_GCM,data:i0pCbkD+RIdf/DKQ42dUn8nr389g3IpSDiC7RpOAmHc+J8Y4uBf37v3eX2JL816dgkr23E7X3ka6xHazki4ceh4SyN1/81q8HidilJoNx0yxlZxcXPhHW8+L6FTr4q5OuObWidp1lgCVQ5owZSDs0IbxIcn56tBVN+pwQjXg8KY=,iv:y9oqjqU3sy92Kd5ZFkOmFuCUaakH5svX5miKgZy38iM=,tag:Ozue0DYr5nkkgUZMGb1QKg==,type:str]
+    lastmodified: "2025-06-06T06:20:49Z"
+    mac: ENC[AES256_GCM,data:mEKWdoxCfglocZ3FmXefUx4G3YJMgPqJ/rqquMrZOfofrlbmE2KZs6rrUK2mbsrcS4kovE/KBHJLAZ7q0r7devSdL6/IQG7fX5ufJP6BQF9vj+2/KtyCHomtgGOklNXSrGwTtH2jHXVHQ324vVbcW5MbvqKHi2mE9fa6/KS6SBA=,iv:dhHpDYi+noshGtbBY3DTT1A68UAm6FNkP4p2It1j3xA=,tag:q+Cguwku5hoj3xsIqDQZDQ==,type:str]
     pgp: []
     unencrypted_suffix: _unencrypted
     version: 3.9.2
